--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 /*
-Theme Name: Tema base
-Author: Pedro Eugelmi
-Author URI: #
-Description: Um tema personalizado para WordPress
+Theme Name: CineMy
+Author: Pedro Eugelmi e Luan Sobral
+Description: Um tema que transforma o wordpress em um site de venda de ingressos.
 Version: 1.0
 */
