--- a/styles/default.scss
+++ b/styles/default.scss
@@ -1,7 +1,15 @@
 // variables
 
 :root {
-    --white: #FFF;
+    --bright-text: #FFF;
     --black: #000;
     --radius: 10px;
+    --main: #003049;
+}
+
+body {
+    font-family: "Fira Sans Condensed", sans-serif;
+    font-weight: 4  00;
+    font-style: normal;
+
 }
