--- a/styles/default.scss
+++ b/styles/default.scss
@@ -11,5 +11,37 @@ body {
     font-family: "Fira Sans Condensed", sans-serif;
     font-weight: 4  00;
     font-style: normal;
+}
 
+// Swiper
+
+.swiper-pagination {
+    position: static;
+
+    .swiper-pagination-bullet-active {
+        background-color: var(--main);
+    }
+}
+
+.swiper-button {
+    &-prev, &-next {
+        position: absolute;
+        top: 50%;
+
+        &:after {
+            color: var(--main);
+            font-size: 30px;
+            font-weight: 600;
+        }
+    }
+
+    &-prev {
+        left: 0px;
+        transform: translate(calc(-100% - 10px), 50%);
+    }
+
+    &-next {
+        right: 0;
+        transform: translate(calc(100% + 10px), 50%);
+    }
 }
