--- a/styles/default.scss
+++ b/styles/default.scss
@@ -5,12 +5,57 @@
     --black: #000;
     --radius: 10px;
     --main: #003049;
+    --gray: #DEDEDE;
+    --secondary: orangered;
 }
 
 body {
     font-family: "Fira Sans Condensed", sans-serif;
-    font-weight: 4  00;
+    font-weight: 400;
     font-style: normal;
+}
+
+// Global
+
+.page-title {
+    font-size: 36px;
+    font-weight: 500;
+}
+
+select {
+    border: 1px solid var(--black);
+    border-radius: var(--radius);
+    height: 40px;
+    display: flex;
+    align-items: center;
+    padding: 0 20px;
+    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"></path></svg>');
+    background-repeat: no-repeat;
+    background-position: right center;
+}
+
+.bg-main {
+    background-color: var(--main);
+}
+
+.bg-black {
+    background-color: var(--black);
+}
+
+.radius {
+    border-radius: var(--radius);
+}
+
+.line {
+    height: 3px;
+    width: 100%;
+    background-color: var(--gray);
+}
+
+// Wordpress 
+.custom-logo {
+    max-width: 120px;
+    height: auto;
 }
 
 // Swiper
@@ -43,5 +88,71 @@ body {
     &-next {
         right: 0;
         transform: translate(calc(100% + 10px), 50%);
+    }
+}
+
+
+.search-form {
+    display: flex;
+    border: 1px solid var(--black);
+    height: 40px;
+    width: 100%;
+    border-radius: 20px;
+
+    input {
+        width: 100%;
+        height: 100%;
+        padding: 0 20px;
+        cursor: unset;
+        outline: none;
+        border: 0;
+
+
+        &:focus {
+            border: 0;
+            outline: none;
+        }
+    }
+
+    button {
+        padding-right: 10px;
+        outline: none;
+        border: 0;
+    }
+}
+
+// Woocommerce 
+
+
+.product {
+    a {
+        text-decoration: none;
+    }
+
+    .woocommerce-LoopProduct-link {
+        display: flex;
+    }
+
+    .thumbnail-wrapper {
+        width: 100%;
+        display: flex;
+    }
+    .attachment-woocommerce_thumbnail  {
+        border-radius: var(--radius);
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .product-content {
+        margin-top: 20px;
+
+
+        .woocommerce-loop-product__title {
+            color: var(--bright-text);
+            font-size: 18px;
+            font-weight: 500;
+            text-decoration: none;
+        }
     }
 }
