--- a/styles/default.scss
+++ b/styles/default.scss
@@ -50,6 +50,23 @@ select {
     height: 3px;
     width: 100%;
     background-color: var(--gray);
+
+    &.bright {
+        background-color: var(--bright-text) !important;
+    }
+}
+
+// Button 
+.button-cart {
+    background-color: var(--secondary);
+    color: var(--bright-text);
+    padding: 10px 20px;
+    border-radius: var(--radius);
+    transition: 0.3s;
+
+    &:hover {
+        opacity: 0.7;
+    }
 }
 
 // Wordpress 
@@ -137,6 +154,7 @@ select {
         width: 100%;
         display: flex;
     }
+    
     .attachment-woocommerce_thumbnail  {
         border-radius: var(--radius);
         width: 100%;
