--- a/styles/style.scss
+++ b/styles/style.scss
@@ -157,12 +157,84 @@
 // Single product 
 
 .single-product {
+    .woocommerce-product-gallery__wrapper {
+        img {
+            width: 100%;
+        }
+        
+    }
     &-seats {
         background-color: var(--main);
         border-radius: var(--radius);
-        padding: 20px;
+        padding: 0 20px;
         display: flex;
         justify-content: center;
+        flex-direction: column;
+
+        &-screen {
+            background-color: var(--gray);
+            height: 50px;
+            width: 200px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: 400;
+            font-size: 24px;
+        }
+
+        &-table {
+            margin-top: 20px;
+        }
+
+        &-area {
+            overflow: scroll;
+            max-width: 600px;
+            max-height: 400px;
+            width: 100%;
+            height: 100%;
+            margin: 0 auto;
+        }
+
+        &-options {
+            margin-top: 20px;
+            padding-bottom: 20px;
+
+            ul {
+                display: flex;
+                flex-direction: column;
+                gap: 5px;
+
+                li {
+                    display: flex;
+                    align-items: center;
+                    gap: 5px;
+                }
+
+                .occupied, .free, .selected {
+                    height: 15px;
+                    width: 15px;
+                }
+
+                .selected {
+                    background-color: #E7CA28;
+                }
+
+                .occupied {
+                    background-color: var(--gray);
+                }
+
+                .free {
+                    background-color: var(--secondary);
+                }
+
+
+                li {
+                    font-size: 14px;
+                    font-weight: 400;
+                    color: var(--bright-text);
+                }
+            }
+        }
 
         &-item {
             background-color: var(--secondary);
@@ -192,7 +264,6 @@
     &-order {
         background-color: var(--main);
         border-radius: var(--radius);
-        height: 100%;
         padding: 20px;
 
         &-price {
@@ -213,6 +284,9 @@
             font-weight: 300;
             color: var(--bright-text);
             margin-top: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
         }
     }
 }
